--- a/Admin/templates/hakkimizdaAdmin.html
+++ b/Admin/templates/hakkimizdaAdmin.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-<title>Yazılar</title>
+<title>Hakkımızda</title>
 {% endblock title %}
 
 
@@ -14,25 +14,9 @@
 
 
 <main class="main-wrapper clearfix">
-    <!-- Page Title Area -->
-    <div class="container-fluid">
-        <div class="row page-title clearfix">
-            <div class="page-title-left">
-                <h6 class="page-title-heading mr-0 mr-r-5">E-Commerce Products</h6>
-                <p class="page-title-description mr-0 d-none d-md-inline-block">statistics, charts and events</p>
-            </div>
-            <!-- /.page-title-left -->
-            <div class="page-title-right d-none d-sm-inline-flex">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Dashboard</a>
-                    </li>
-                    <li class="breadcrumb-item active">E-Commerce Products</li>
-                </ol>
-            </div>
-            <!-- /.page-title-right -->
-        </div>
-        <!-- /.page-title -->
-    </div>
+
+
+
     <!-- /.container-fluid -->
     <!-- =================================== -->
     <!-- Different data widgets ============ -->
@@ -48,9 +32,9 @@
 
 
 
-                                {% if not yazilar %}
+                                {% if not hakkimizda %}
                                
-                                <h3 style="color: white;">Hiç yazı bulunamadı.</h3>
+                                <h3 style="color: white;">Hiç hakkımızda bulunamadı.</h3>
                                 {% endif %}
 
                                 
@@ -58,42 +42,29 @@
 
 
 
-                                {% for yazi in yazilar %}
+                                {% for hak in hakkimizda %}
 
 
 
                                 <div class="product col-12 col-sm-6 col-md-4">
                                     <div class="card">
                                         <div class="card-header">
-                                            <a href="{% url 'showPostAdmin' yazi.slug %}">
-                                                <img style="width: 320px;; height: 200px;" src="{{yazi.image.url}}"
+                                            <a  href="{% url 'hakkimizdaUpdateAdmin' hak.pk %}">
+                                                <img src="{{hak.image.url}}"
                                                     alt=""> <span class="triangle-top-right"></span>
                                             </a>
                                         </div>
                                         <!-- /.card-header -->
                                         <div class="card-body">
                                             <div class="d-flex">
-                                                <h5 class="product-title">{{yazi.title}}</h5>
+                                                <h5 class="product-title">{{hak.title}}</h5>
                                             </div>
-                                            <!-- /.d-flex --> <span class="text-muted">{{yazi.writer}} (
-                                                {{yazi.created_date.date}})</span><br><a style="float: right;" onclick="return confirm('Bu yazıyı silmek istediğinizden emin misiniz?\nBu işlem geri alınamaz.');" href="{% url 'deletePostAdmin' yazi.slug %}" class="btn btn-danger btn-xs">Sil</a>
+                                            <!-- /.d-flex --> <span class="text-muted">{{hak.yazi|truncatechars:25|safe}} (
+                                                {{hak.created_date.date}})</span><br><a style="float: right;" onclick="return confirm('Bu hakkımızda yazısını silmek istediğinizden emin misiniz?\nBu işlem geri alınamaz.');" href="" class="btn btn-danger btn-xs">Sil</a>
                                         </div>
                                         <!-- /.card-body -->
-                                        <div class="card-footer">
-                                            <div class="product-info"><a href="javascript:void(0);"><i
-                                                        class="list-icon material-icons">remove_red_eye</i>&nbsp;
-                                                    {{yazi.readingCount}}</a>
-                                            </div>
-                                            <div class="product-info"><a href="javascript:void(0);"><i
-                                                        class="list-icon material-icons">favorite_border</i>&nbsp;
-                                                    1,184</a>
-                                            </div>
-                                            <div class="product-info"><a href="javascript:void(0);"><i
-                                                        class="list-icon material-icons">comment</i>&nbsp;
-                                                    {{yazi.yorumlar.count}}</a>
-                                            </div>
-                                        </div>
-                                        <!-- /.card-footer -->
+                                     
+                                       
                                     </div>
                                     <!-- /.card -->
                                 </div>
@@ -106,7 +77,7 @@
                             <!-- /.ecommerce-products -->
                             <!-- Product Navigation -->
 
-                            {% if  yazilar %}
+                            {% if  hakkimizda %}
 
 
 
@@ -114,9 +85,9 @@
                                 <nav aria-label="Page navigation">
                                     <ul class="pagination pagination-lg d-flex justify-content-center">
 
-                                        {% if yazilar.has_previous %}
+                                        {% if hakkimizda.has_previous %}
                                         <li class="page-item">
-                                            <a class="page-link" href="?page={{yazilar.previous_page_number}}"
+                                            <a class="page-link" href="?page={{hakkimizda.previous_page_number}}"
                                                 tabindex="-1" aria-disabled="true">Önceki Sayfa</a>
                                         </li>
                                         {% else %}
@@ -125,13 +96,13 @@
                                         </li>
                                         {% endif %}
 
-                                        <li class="page-item"><a class="page-link" href="#">{{yazilar.number}}</a></li>
-                                        {% if yazilar.has_next %}
+                                        <li class="page-item"><a class="page-link" href="#">{{hakkimizda.number}}</a></li>
+                                        {% if hakkimizda.has_next %}
                                         <li class="page-item"><a class="page-link"
-                                                href="?page={{yazilar.next_page_number}}">Sonraki</a></li>
+                                                href="?page={{hakkimizda.next_page_number}}">Sonraki</a></li>
 
                                         <li class="page-item">
-                                            <a class="page-link" href="?page={{yazilar.paginator.num_pages}}">Son
+                                            <a class="page-link" href="?page={{hakkimizda.paginator.num_pages}}">Son
                                                 Sayfa</a>
                                         </li>
 
