--- a/Admin/templates/loginAdmin.html
+++ b/Admin/templates/loginAdmin.html
@@ -73,14 +73,14 @@
                 </form>
                 <!-- /.form-material -->
                 <hr>
-                <div class="row btn-list">
+                <!-- <div class="row btn-list">
                     <div class="col-md-6">
                         <button type="button" class="btn btn-block btn-facebook ripple" data-toggle="tooltip" data-placement="top" title="Login with Facebook"><i class="social-icons list-icon">facebook</i> facebook</button>
                     </div>
                     <div class="col-md-6">
                         <button type="button" class="btn btn-block btn-googleplus ripple" data-toggle="tooltip" data-placement="top" title="Login with Google"><i class="social-icons list-icon">googleplus</i> google</button>
                     </div>
-                </div>
+                </div> -->
                 <!-- /.btn-list -->
                 <footer class="col-sm-12 text-center">
                     <hr>
