--- a/Admin/templates/alanUpdateAdmin.html
+++ b/Admin/templates/alanUpdateAdmin.html
@@ -1,5 +1,10 @@
 {% extends 'baseAdmin.html' %}
-{% load static %}
+
+{% block title %}
+<title>Çalışma Alanları</title>
+{% endblock title %}
+
+
 
 
 
@@ -40,19 +45,25 @@
                     <div class="widget-bg">
                         <div class="widget-body clearfix">
 
-                            <form action="{% url 'updateProfileAdmin' %}" method="POST" enctype="multipart/form-data">
+                            <form 
+                            {% if update %}
+                                action="{% url 'AlanUpdateAdmin' pk=item.pk %}"
+                            {% else %}
+                                action="{% url 'AlanEkleAdmin' %}"
+                                
+                            {% endif %}
+                                 method="POST" enctype="multipart/form-data">
                                 {% csrf_token %}
-                                <center>
-                                    <figure class="profile-user-avatar thumb-md">
-                                        
-                                        {% if request.user.avatar %}
-                                            <img src="{{request.user.avatar.url}}" alt="User Wall">
-                                        {% else %}
-                                        <img src="{% static 'img/avatar.png' %}" alt="User Wall">
-                                        {% endif %}
-                                            
-                                    </figure>
-                                </center>
+                               
+                                
+                                <!-- {% if update %}
+                                    <center>
+                                        <figure class="profile-user-avatar thumb-md">
+                                            <img src="{{item.image.url}}" alt="User Wall">
+                                        </figure>
+                                    </center>
+                                {% endif %} -->
+                                    
                                 <br>
 
 
@@ -81,9 +92,8 @@
 
 
                                 <br><br>
-
+                                {{form.media}}
                                 {{form.as_p}}
-                                {{form1.as_p}}
 
 
                                 <br><br>
