--- a/Admin/templates/calismaAlanlariAdmin.html
+++ b/Admin/templates/calismaAlanlariAdmin.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-<title>Slider</title>
+<title>Çalışma Alanları</title>
 {% endblock title %}
 
 
@@ -32,9 +32,9 @@
 
 
 
-                                {% if not sliders %}
+                                {% if not alanlar %}
                                
-                                <h3 style="color: white;">Hiç slider bulunamadı.</h3>
+                                <h3 style="color: white;">Hiç çalışma alanı bulunamadı.</h3>
                                 {% endif %}
 
                                 
@@ -42,25 +42,26 @@
 
 
 
-                                {% for slider in sliders %}
+                                {% for alan in alanlar %}
 
 
 
                                 <div class="product col-12 col-sm-6 col-md-4">
                                     <div class="card">
                                         <div class="card-header">
-                                            <a href="{% url 'sliderUpdateAdmin' slider.pk %}">
-                                                <img src="{{slider.image.url}}"
-                                                    alt=""> <span class="triangle-top-right"></span>
+                                            <a href="{% url 'AlanUpdateAdmin' alan.pk %}">
+                                               
+                                                    <i class="{{alan.icon}}"></i>
+                                               
                                             </a>
                                         </div>
                                         <!-- /.card-header -->
                                         <div class="card-body">
                                             <div class="d-flex">
-                                                <h5 class="product-title">{{slider.top_title}}</h5>
+                                                <a href="{% url 'AlanUpdateAdmin' alan.pk %}"><h5 class="product-title">{{alan.name}}</h5></a>
                                             </div>
-                                            <!-- /.d-flex --> <span class="text-muted">{{slider.bottom_title|truncatechars:25|safe}} (
-                                                {{slider.created_date.date}})</span><br><a style="float: right;" onclick="return confirm('Bu slideri silmek istediğinizden emin misiniz?\nBu işlem geri alınamaz.');" href="{% url 'deleteSliderAdmin' pk=slider.pk %}" class="btn btn-danger btn-xs">Sil</a>
+                                            <!-- /.d-flex --> <span class="text-muted">{{alan.content|truncatechars:25|safe}} (
+                                                {{alan.created_date.date}})</span><br><a style="float: right;" onclick="return confirm('Bu alani silmek istediğinizden emin misiniz?\nBu işlem geri alınamaz.');" href="{% url 'deleteAlanAdmin' alan.pk %}" class="btn btn-danger btn-xs">Sil</a>
                                         </div>
                                         <!-- /.card-body -->
                                      
@@ -77,7 +78,7 @@
                             <!-- /.ecommerce-products -->
                             <!-- Product Navigation -->
 
-                            {% if  sliders %}
+                            {% if  alanlar %}
 
 
 
@@ -85,9 +86,9 @@
                                 <nav aria-label="Page navigation">
                                     <ul class="pagination pagination-lg d-flex justify-content-center">
 
-                                        {% if sliders.has_previous %}
+                                        {% if alanlar.has_previous %}
                                         <li class="page-item">
-                                            <a class="page-link" href="?page={{sliders.previous_page_number}}"
+                                            <a class="page-link" href="?page={{alanlar.previous_page_number}}"
                                                 tabindex="-1" aria-disabled="true">Önceki Sayfa</a>
                                         </li>
                                         {% else %}
@@ -96,13 +97,13 @@
                                         </li>
                                         {% endif %}
 
-                                        <li class="page-item"><a class="page-link" href="#">{{sliders.number}}</a></li>
-                                        {% if sliders.has_next %}
+                                        <li class="page-item"><a class="page-link" href="#">{{alanlar.number}}</a></li>
+                                        {% if alanlar.has_next %}
                                         <li class="page-item"><a class="page-link"
-                                                href="?page={{sliders.next_page_number}}">Sonraki</a></li>
+                                                href="?page={{alanlar.next_page_number}}">Sonraki</a></li>
 
                                         <li class="page-item">
-                                            <a class="page-link" href="?page={{sliders.paginator.num_pages}}">Son
+                                            <a class="page-link" href="?page={{alanlar.paginator.num_pages}}">Son
                                                 Sayfa</a>
                                         </li>
 
@@ -114,13 +115,12 @@
                             </div>
 
                             {% endif %}
+
+
                             <!-- /.col-md-12 -->
-                        </div>
-
-                        <br>
+                        </div><br>
                        
-                        <center> <a href="{% url 'sliderEkleAdmin' %}" style="color: black;" class="btn btn-success">Yeni Oluştur</a></center>
-
+                           <center> <a href="{% url 'AlanEkleAdmin' %}" style="color: black;" class="btn btn-success">Çalışma Alanı Ekle</a></center>
 
                         <!-- /.widget-body -->
                     </div>
