--- a/Admin/templates/indexAdmin.html
+++ b/Admin/templates/indexAdmin.html
@@ -37,9 +37,10 @@
             <!-- =================================== -->
             <!-- Different data widgets ============ -->
             <!-- =================================== -->
-
+            <br><br><br><br>
+            <center><p style="color: white; font-weight: bold; font-size: large;">Anasayfaya hoşgeldiniz.Lütfen yandan yapacağınız işlemi seçiniz</p></center>
         </main>
         <!-- /.main-wrappper -->
-      
+     
 
         {% endblock content %}
