settings dosyası parçalandı

--- a/Admin/templates/indexAdmin.html
+++ b/Admin/templates/indexAdmin.html
@@ -38,8 +38,12 @@
             <!-- Different data widgets ============ -->
             <!-- =================================== -->
             <br><br><br><br>
-            <center><p style="color: white; font-weight: bold; font-size: large;">Anasayfaya hoşgeldiniz.Lütfen yandan yapacağınız işlemi seçiniz</p></center>
-        </main>
+            <center><p style="color: white; font-weight: bold; font-size: large;">Anasayfaya hoşgeldiniz.Lütfen yandan yapacağınız işlemi seçiniz</p>
+            
+            <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_c0qjeufv.json"   background="rgba(0, 0, 0, 0)"   speed="1"  style="width: 400px; height: 400px;"  loop  autoplay></lottie-player>
+        </center>
+        
+      </main>
         <!-- /.main-wrappper -->
      
 
