--- a/Admin/templates/footerAdmin.html
+++ b/Admin/templates/footerAdmin.html
@@ -9,6 +9,7 @@
 </div>
 <!--/ #wrapper -->
 <!-- Scripts -->
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> <!-- lottie animation-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.7.9/metisMenu.min.js"></script>
